--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <div class="flex shujuqu">
                     <!--数据块-->
                     <div style="height: 100px;"class="shuju flex1 baise yingyin  mgr8 card">
-                        <a style="text-decoration: none;color: brown;" href="./我的元旦祝贺网页.html"><h3>我的收获</h3>
+                        <a style="text-decoration: none;color: brown;" href="https://zhangtianci2116.github.io/re01/yuandan1"><h3>我的收获</h3>
                             <pre style="color: black;">这是我从九月到1月初的收获，
 包括学校的收获和其他的收获，
 包含着我的感悟。                                
@@ -244,4 +244,5 @@
          </div>
     </div>
 </body>
+
 </html>
