--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </pre>
                     </div>
                     <div style="height: 100px;"class="shuju flex1 baise yingyin  mgr8 card">
-                        <a style="text-decoration: none;color: brown;" href="./我的元旦祝贺网页.html"><h3>我的元旦祝福</h3>
+                        <a style="text-decoration: none;color: brown;" href="https://zhangtianci2116.github.io/re01/yuandan1"><h3>我的元旦祝福</h3>
                             <pre style="color: black;">这是我2026年的元旦祝福，
 在完成列表之前先放在这。
                                 
@@ -246,3 +246,4 @@
 </body>
 
 </html>
+
